Style fav btn in favs pg, fix rating alignment

--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -10,7 +10,7 @@
   }
 
   .btn-remove-favs {
-    margin: 0.4em 0;
+    margin: 0.8em 0 0;
     justify-self: center;
     text-align: center;
   }
