--- a/src/styles/_movies.scss
+++ b/src/styles/_movies.scss
@@ -84,6 +84,8 @@
 }
 
 .rating {
+    margin-top: -1.5em;
+    margin-bottom: 1.5em;
     display: flex;
     flex-direction: row;
     align-items: center;
